Fixing <EditTagEntry> layout on mobile.
Now it'll split into two rows below 500px.

--- a/frontend/src/scss/components/_tag-entry.scss
+++ b/frontend/src/scss/components/_tag-entry.scss
@@ -12,7 +12,23 @@
         @include aria-invisible();
     }
 
+    // Used to keep the color-picker under the default stuff.
     &__container
+    {
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+        width: 100%;
+        gap: 0.75rem;
+
+        @media (max-width: 500px)
+        {
+            flex-direction: column;
+        } 
+    }
+
+    // Used to split the tag-entry on mobile.
+    &__input-wrapper
     {
         display: flex;
         align-items: center;
@@ -20,6 +36,7 @@
         gap: 0.75rem;
     }
 
+    // Prevents the <Tag> from deforming.
     &__tag-wrapper
     {
         display: flex;
@@ -53,7 +70,7 @@
         align-items: center;
         height: 100%;
         width: 10rem;
-        gap: 1rem;
+        gap: 1rem; 
     }
 
     &__button
@@ -79,7 +96,7 @@
 
         &--save, &--delete
         {
-            transition: 0.2s;
+            transition: 0.2s background-color;
         }
 
         &--save
@@ -107,7 +124,7 @@
         {
             border: none;
             color: $color_white;
-            transition: 0.2s;
+            transition: 0.2s background-color;
             width: 100%;
 
             &:hover
